--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,10 +1,10 @@
 body{
     font-family: 'Ubuntu', sans-serif;
-    background-color: rgb(46, 71, 71);
+    background-image:url('../img/hypnotize.png');
 }
 .navi {
     height: 83px;
-    background-color: rgb(53, 6, 53);
+    background-color: whitesmoke;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
@@ -17,46 +17,59 @@ body{
     font-size: 1.2em;
     text-transform: uppercase;
     text-decoration: none;
-    color:antiquewhite;
+    color:white;
   }
   .navlink:hover {
-    color:antiquewhite;
-    border-left: 1px solid antiquewhite;
-    border-right: 1px solid antiquewhite;
+    color:grey;
+    border-left: 1px solid grey;
+    border-right: 1px solid grey;
     padding: 1em 1em;
   }
 .job{
-    text-shadow: 1px 1px 2px #471b52;
+    text-shadow: 1px 1px 2px white;
     font-family: 'pacifico';
     font-size: 28px;
-    color: antiquewhite;
+    color: grey;
 }
 .header{
-    border-bottom: 2px antiquewhite solid;
+    color:grey;
     font-size:60px;
     display: flex;
     justify-content: center;
 }
+.container-both{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
+}
 .section{
-    color: antiquewhite;
+    background-color:white;
+    margin:35px;
+    padding: 15px;
+    color: grey;
     display: flex;
     justify-content: center;
 }
 
 .bar-graph{
-    width:100%;
+    width:50%;
+    margin: 35px;
+    padding: 15px;
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
+
 h1 { 
-    color: antiquewhite;
+    color:grey;
 }
 p{
-    color: antiquewhite;
+    color: grey;
 }
 .container-bar {
-    width:50%;
+    width:100%;
     background-color: #ddd;
   }
   
