--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -7,33 +7,45 @@ img {
 
 h1 {
     font-family: 'Times New Roman', Times, serif;
-    color: rgb(196, 207, 207);
+    color: rgb(66, 170, 170);
+}
+h1:hover{
+font-size: 40px;
+}
+h1, h3 {
+    text-align: center;
 }
 
 h3 {
+    color: rgb(116, 114, 114);
 
 }
-aside {
+aside{
     float: right;
     list-style-type: none;
-    color: green;
+    color: rgb(34, 116, 116);
+    
 }
+
 body{
-    background-image: url(https://www.wallpapersbrowse.com/images/az/azzx18f.jpg);
+    background-image: url(http://blog.visme.co/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-042.jpg);
     background-size: cover;
+    background-attachment: fixed;
     
 }
 
 p {
+    color: rgb(116, 114, 114);
     padding: 100px;
 }
 div {
-    border-style: dashed;
-    border-color: rgb(250, 68, 153);
+    border-style: dotted;
+    border-color: rgba(13, 24, 70, 0.747);
     text-align: center;
     padding: 5px;
     margin: 10px;
     float: left;
+    color: rgb(34, 116, 116); 
 
 }
 
