--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -11,25 +11,11 @@ p {
     padding-left: 50px;
 }
 
-/* .image-cropper {
-    max-width: 100px;
-    height: auto;
-    position: relative;
-    overflow: hidden;
-}
-
 img {
-    display: block;
-    margin: 0 auto;
-    height: auto;
-    width: 100%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border-radius: 50%;
-} */
-
+    float: right;
+    padding: 20px;
+    margin-bottom: 75px;
+}
 .footer {
     position: fixed;
     left: 0;
