--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -10,10 +10,13 @@ h1 {
     color: rgb(66, 170, 170);
 }
 h1:hover{
-font-size: 40px;
+font-size: 45px;
 }
 h1, h3 {
     text-align: center;
+}
+h3:hover{
+    font-size:30px; 
 }
 
 h3 {
@@ -21,24 +24,29 @@ h3 {
 
 }
 aside{
+    font-size: 18px;
     float: right;
     list-style-type: none;
     color: rgb(34, 116, 116);
     
 }
 
-body{
-    background-image: url(http://blog.visme.co/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-042.jpg);
+
+ body{
+   
+    background-image: url(https://wallpaper-house.com/data/out/6/wallpaper2you_84050.jpg);
     background-size: cover;
     background-attachment: fixed;
     
 }
 
 p {
+    font-size: 18px;
     color: rgb(116, 114, 114);
     padding: 100px;
 }
 div {
+    font-size: 18px;
     border-style: dotted;
     border-color: rgba(13, 24, 70, 0.747);
     text-align: center;
