--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,10 +1,60 @@
-h1, h3 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding-left: 100px;
+header {
+    padding-right: 200px;
+    text-align: right;
+    font-family: michroma;
+    color: #BDCC94;
 }
 
 body {
-    background-image: url(../Images/paper.png);
+    background-image: url(../Images/congruent_outline.png);
+}
+
+nav {
+    float: left;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    list-style-type: none;
+    font-family: michroma;
+}
+ 
+li { 
+    float: left;
+}
+
+li a {
+    display: block;
+    color: whitesmoke;
+    background-color:#333333;
+    padding: 10px 35px;
+    border-radius: 20px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #D8D7E8;
+    color: #333333;
+}
+
+main {
+    display: flex;
+    padding: 10px;
+}
+
+section {
+    padding: 10px;
+    background-image: url("../Images/topography.png");
+    border-radius: 12px;
+    font-family: hammersmith one;
+    font-size: 20px;
+    height: 75%;
+    margin-top: 100px;
+}
+
+aside {
+    background-color:transparent;
+    padding: 5px;
+    border-radius: 12px;
 }
 
 p {
@@ -15,6 +65,7 @@ img {
     float: right;
     padding: 20px;
     margin-bottom: 75px;
+    border-radius: 20px;
 }
 
 .footer {
@@ -22,7 +73,8 @@ img {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: grey;
-    color: white;
+    background-image: url("../Images/congruent_outline.png");
+    color: #BDCC94;
     text-align: center;
+    font-family: michroma;
 }
