--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -6,9 +6,9 @@ header {
 }
 
 body {
-    background-image: url(../Images/congruent_outline.png);
+    background-image: url("../Images/greyfloral.png");
 }
-
+/* -------------------------------------------------------------------- */
 nav {
     float: left;
     margin: 0;
@@ -16,12 +16,13 @@ nav {
     overflow: hidden;
     list-style-type: none;
     font-family: michroma;
+    background-color: none;
 }
  
 li { 
     float: left;
 }
-
+ 
 li a {
     display: block;
     color: whitesmoke;
@@ -35,7 +36,7 @@ li a:hover {
     background-color: #D8D7E8;
     color: #333333;
 }
-
+/* ----------------------------------------------------------------------- */
 main {
     display: flex;
     padding: 10px;
@@ -67,7 +68,7 @@ img {
     margin-bottom: 75px;
     border-radius: 20px;
 }
-
+/* -------------------------------------------------------------------------- */
 .footer {
     position: fixed;
     left: 0;
