--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -6,9 +6,11 @@ header {
 }
 
 body {
-    background-image: url("../Images/greyfloral.png");
+    background-image: url("../Images/strange_bullseyes.png");
 }
-/* -------------------------------------------------------------------- */
+
+/* ------------------------------------ */
+
 nav {
     float: left;
     margin: 0;
@@ -25,18 +27,20 @@ li {
  
 li a {
     display: block;
-    color: whitesmoke;
-    background-color:#333333;
+    color: black;
+    background-color: #DEDEDE;
     padding: 10px 35px;
     border-radius: 20px;
     text-decoration: none;
 }
 
 li a:hover {
-    background-color: #D8D7E8;
-    color: #333333;
+    background-color: #6F7F65;
+    color: whitesmoke;
 }
-/* ----------------------------------------------------------------------- */
+
+/* -------------------------------------- */
+
 main {
     display: flex;
     padding: 10px;
@@ -47,7 +51,7 @@ section {
     background-image: url("../Images/topography.png");
     border-radius: 12px;
     font-family: hammersmith one;
-    font-size: 20px;
+    font-size: 15px;
     height: 75%;
     margin-top: 100px;
 }
@@ -56,6 +60,20 @@ aside {
     background-color:transparent;
     padding: 5px;
     border-radius: 12px;
+    
+}
+
+.image-cropper {
+    height: auto;
+    position: relative;
+}
+
+.image-cropper img{
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;  
 }
 
 p {
@@ -68,14 +86,16 @@ img {
     margin-bottom: 75px;
     border-radius: 20px;
 }
+
 /* -------------------------------------------------------------------------- */
+
 .footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-image: url("../Images/congruent_outline.png");
-    color: #BDCC94;
+    background-image: transparant;
+    color: black;
     text-align: center;
-    font-family: michroma;
+    font-family: questrial;
 }
