--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,11 +1,36 @@
-header {
-    text-align: center;
-}
-
 body {
-    background-color:powderblue;
+    margin: 0;
+    padding: 0;
+    background-image: url(../images/BG.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: 3000px;
 }
-
-
-
-
+ .box {
+    width: 450px;
+    background: rgba(0,0,0,0.4);
+    padding: 40px;
+    text-align: center;
+    margin: auto;
+    margin-top: 5%;
+    color: white;
+    font-family: 'Century Gothic', sans-serif;
+}
+ .box-img{
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+ }
+ .box h1{
+    font-size: 35px;
+    letter-spacing: 4px;
+    font-weight: 100;
+}
+ .box h5{
+    font-size: 20px;
+    letter-spacing: 3px;
+    font-weight: 100;
+}
+ .box p{
+    text-align: justify;
+}
