changed content and worked on CSS, added links

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,8 +1,28 @@
+
 body {
     background-color: #000000;
-    background-image: url(https://www.designfreelogoonline.com/wp-content/uploads/2016/03/00106-3D-company-logo-design-free-logo-online-Template-03.png);
+    background-image: url(https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/23559537_4318453848974_4607771667115665325_n.jpg?_nc_cat=111&_nc_eui2=AeF3mGH0c1Rlzrac2IegSyi1leuSACR7Q0C-IhK5E-UMMqqkuqUWw13X2wAddDlaJb7dyFL3EbLuyTzaXBLgvTJTgpkMCyqDsMdwa9aqL3-QvA&_nc_ht=scontent-dfw5-2.xx&oh=86588c31ae984d3d742f0f079f247b5f&oe=5C47146F);
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+
+#biopic {
+    display:block;
+    margin: 10px;
+    width: 20%;
+    
+    border-style: solid;
+    border-color: whitesmoke;
+    border-radius: 50%;
+}
+#biopic:hover {
+    width:24%;
+}
+
+.name {
+    float: left;
+    width: 100%;
 }
 
 header {
@@ -19,27 +39,10 @@ header {
     color: black;
 }
 
-#biopic {
-    display:block;
-    margin: 10px;
-    width: 10%;
-    
-    border-style: solid;
-    border-color: whitesmoke;
-    border-radius: 50%;
-}
-
-.ceopic {
-    float: left;
-    width: 100%;
-    padding-left: 40%;
-    
-}
-
 .bio {
     float:left;
     padding: 0px 10px;
-    margin: auto 200px;
+    margin: 10px;
 
     border: solid white;
     border-radius: 10px;
