develop social media buttons, add footer

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -4,6 +4,7 @@ body {
     background-image: url(https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/23559537_4318453848974_4607771667115665325_n.jpg?_nc_cat=111&_nc_eui2=AeF3mGH0c1Rlzrac2IegSyi1leuSACR7Q0C-IhK5E-UMMqqkuqUWw13X2wAddDlaJb7dyFL3EbLuyTzaXBLgvTJTgpkMCyqDsMdwa9aqL3-QvA&_nc_ht=scontent-dfw5-2.xx&oh=86588c31ae984d3d742f0f079f247b5f&oe=5C47146F);
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -15,6 +16,7 @@ body {
     border-style: solid;
     border-color: whitesmoke;
     border-radius: 50%;
+    box-shadow: 2px 4px 18px #000000;
 }
 #biopic:hover {
     width:24%;
@@ -30,13 +32,14 @@ header {
     padding: 0px 10px;
     margin: 10px;
 
-    border: solid white;
+    border: solid whitesmoke;
     border-radius: 10px;
-    background-color: whitesmoke;
+    background-color: black;
+    box-shadow: 2px 4px 18px #000000;
 
     text-align: center;
     font-size: 26px;
-    color: black;
+    color: whitesmoke;
 }
 
 .bio {
@@ -44,8 +47,51 @@ header {
     padding: 0px 10px;
     margin: 10px;
 
-    border: solid white;
+    border: solid whitesmoke;
     border-radius: 10px;
+    box-shadow: 2px 4px 18px #000000;
 
-    background-color: whitesmoke;
+    background-color: black;
+
+    color: whitesmoke;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.fa-instagram {
+    background: #125688;
+    color: white;
+}
+
+.fa-envelope {
+    background: #dd4b39;
+    color: white;
+}
+
+footer {
+    display: block;
+    margin-left: 40%;
+    font-size: 8px;
+    font-style: italic;
+    color: whitesmoke;
 }
