--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -45,6 +45,7 @@ body{
 }
 .section{
     background-color:white;
+    border: 2px whitesmoke solid;
     margin:35px;
     padding: 15px;
     color: grey;
@@ -57,6 +58,7 @@ body{
     margin: 35px;
     padding: 15px;
     background-color: white;
+    border: 2px whitesmoke solid;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
