--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -3,35 +3,67 @@ body{
     margin: 0;
     font-family: sans-serif;
     font-weight: normal;
+    display: inline;
 }
 
 header{
     font-size: 40pt;
-    display: block;
     color: floralwhite;
+    outline-color: black;
+    outline-width: 25ch;
     font-weight: bolder;
-    position: absolute;
+    font-family: "Arial Black", Gadget, sans-serif;
     margin: 0 auto;
+    display: inline;
+    align-content: center;
+    justify-content: center;
+    position: absolute;
+    text-align: center;
+    width: 100%;
 }
 
 p{
     color: floralwhite;
-    font-size: 12pt;
+    outline-color: black;
+    outline-width: 10ch;
+    font-size: 14pt;
     margin: auto;
-    width: 1000px;
+    width: 900px;
 }
 
-img{
+.jim{
     background-repeat: no-repeat;
-    margin-top: 5pc;
+    image-resolution: 72dpi;
     border-radius: 8px;
+    display: block;
+    margin-top: 75px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
     
-
 }
 
 img:hover {
-    opacity: 1;
+    opacity: .5;
     border-radius: 8px;
   }
+
+.logo{
+    margin-top: 25px;
+    height: 30px;
+    width: 50px;
+}
+
+footer{
+    font-size: 10pt;
+    color: floralwhite;
+    margin-bottom: 25pc;
+}
+
+a:visited{
+    color: floralwhite;
+}
+
+ 
 
 
