--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -4,19 +4,32 @@ body {
     background-repeat: no-repeat;
     background-position: 50%;
 }
-p {
-    text-align: center;
+article {
+    text-align: left;
+    float: left;
     letter-spacing: 1.5px;
-    line-height: 16px;
-    height: 308px;
+    line-height: 21px;
+    height: 323px;
     width: 550px;
     background-color: blanchedalmond;
-    float: left
+    border-style: solid;
+    border-width: 2px;
+    border-color: aquamarine;
+    opacity: 0.6;
 }
-aside {
-    text-align: right;
+div {
+    text-align: center;
+    float: right;
+    letter-spacing: 1.5px;
+    line-height: 20px;
+    height: 325px;
+    width: 325px;
+    background-color: blanchedalmond;
+    opacity: 0.6;
+}
+/* aside {
+    text-align: left;
     float: right;
     height: 308px;
     width: 250px;
-
-}
+} */
