--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -7,33 +7,31 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
 #biopic {
-    display:block;
     margin: 10px;
-    width: 20%;
-    
+    width: 25%;
     border-style: solid;
     border-color: whitesmoke;
     border-radius: 50%;
     box-shadow: 2px 4px 18px #000000;
 }
+
 #biopic:hover {
-    width:24%;
+    box-shadow: 2px 4px 18px whitesmoke;
 }
 
 .name {
-    float: left;
     width: 100%;
 }
 
 header {
     float: left;
-    padding: 0px 10px;
+    padding: 5px 10px;
     margin: 10px;
 
     border: solid whitesmoke;
     border-radius: 10px;
+
     background-color: black;
     box-shadow: 2px 4px 18px #000000;
 
@@ -44,6 +42,7 @@ header {
 
 .bio {
     float:left;
+    width: 424px;
     padding: 0px 10px;
     margin: 10px;
 
@@ -52,7 +51,6 @@ header {
     box-shadow: 2px 4px 18px #000000;
 
     background-color: black;
-
     color: whitesmoke;
 }
 
@@ -66,6 +64,7 @@ header {
 
 .fa:hover {
     opacity: 0.7;
+    box-shadow: 2px 2px 5px whitesmoke;
 }
 
 .fa-facebook {
@@ -89,9 +88,9 @@ header {
 }
 
 footer {
-    display: block;
-    margin-left: 40%;
+    padding: 0 10px;
     font-size: 8px;
     font-style: italic;
     color: whitesmoke;
+    clear: both;
 }
