--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,33 +1,123 @@
 body {
+    background-color: gray;
     background-image: url(../images/circle.png);
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: 1250px;
-    background-color: darkgray;
+    background-size: cover;
+    background-position: center;
+
+}
+header {
+    background-color: none;
+    color: whitesmoke;
+    text-align: center;
+    margin: auto;
+    background-position: center;
+}
+
+header img{
+    width: 500px;
+    height: auto;
+    border-radius: 75%;
+    border-style: solid;
+    border: 5px solid black;
+}
+ header h1 {
+     font-family: Arial, Helvetica, sans-serif;
+     color: black;
+     font-size: 64px;
+ }
 
 
-    color: limegreen;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-align: left;
+
+header button {
+    background-color: black;
+    color: slategray;
+    border: 2px solid slategray;
+    padding: 10px 25px;
+    text-align: center;
+    display: inline-block;
+    font-size: 12px;
     font-size: 16px;
-
-    border: .5rem outset pink;
-    outline: .5rem solid khaki;
-    border-radius: 12px;
-    box-shadow: 0 0 0 2rem gold;
+    border-radius:
 }
-.social {
-    background-color: yellow;
+
+.sidenav {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+
+}
+
+.sidenav ul {
+    list-style-type: none;
+}
+
+
+main {
+    background-color: gray;
+    background-image: url(../images/circle.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 1250px;
+    background-size: cover;
+    background-position: center;
+
+    color: slategray;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+main p {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    margin-right: 100px;
+    margin-left: 160px;
+    padding: 10px;
+    color: black;
+    font-size: 24px;
+}
+
+footer {
+    color: #818181;
+    background-color: #111;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    text-align: center;
+}
+
+aside {
+    color: red;
+    background-color: black;
     float: right;
+    text-align: center;
+    margin-right: 5px;
 }
-p {
-    border-left: 6px solid red;
-    border-bottom: 6px solid red;
+
+aside ul {
+    text-decoration: none;
+    list-style-type: none;
 
 }
 
-img {
-    size: 500px;
 
-}
 
 
