--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -101,6 +101,8 @@ footer {
     background-color: #111;
     padding-top: 25px;
     padding-bottom: 25px;
+    margin-bottom: none;
+    margin-left: 150px;
     text-align: center;
 }
 
@@ -110,13 +112,16 @@ aside {
     float: right;
     text-align: center;
     margin-right: 5px;
+    padding-right: 10px;
+    height: 250x;
+
 }
 
 aside ul {
     text-decoration: none;
     list-style-type: none;
-
 }
+
 
 
 
