Played with css

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,11 +1,11 @@
 body {
-    background-color: #fff4e0;
+    background-color: #ffffff;
     margin: 0;
 
 }
 
 header {
-    background-color: #5d554a;
+    background-color: dodgerblue;
     padding: 1%;
 }
 
@@ -13,11 +13,17 @@ h1 {
     float: left;
 }
 
+h1 p {
+    clear: both;
+}
+
 nav {
-    display: inline;
     margin: 2%; 
+    padding: 0.5em;
     float: right;
     background-color: white;
+    border: 1px solid black;
+    border-radius: 8em 4em;
 }
 
 nav:hover {
@@ -31,17 +37,21 @@ img {
 
 main {
     background-color: rgba(255,255,255,.5);
-    padding: 1%;
-    margin-left: 30%;
-    margin-right: 30%;
+    padding: 2em;
+    width: 600px;
+    margin: 2em auto; 
+    border: 1px solid black;
+    border-radius: 4em 8em;
+    background-image: url(https://animals.sandiegozoo.org/sites/default/files/2016-08/animals_hero_mountains.jpg);
 }
 
-.main {
-   
+section {
+    background-color: slategray;
 }
 
 footer {
     padding: 1%;
+    background-color: dodgerblue;
 }
 
 .footer {
