--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,38 +1,37 @@
+
 body {
-    background-color: white;
+    background-color: #FFFFFF;
     font-family: veranda;
     padding: 50px;
-    color: grey;
+    color: #000000;
 }
 
 img {
-    border-radius: 75px;
-    max-width: 150px;
+    border-radius: 150px;
 }
   
 header {
-    background-color: #f6d9d1;
-    padding: 30px;
+    background-color: #58BFA7;
+    margin: -57px;
+    padding: 10px;
     text-align: center;
     font-size: 35px;
-    color: #a6a6a6;
+    color: #000000;
     
 }
 h2 {
-    font-size: 30px;
+    font-size: 45px;
+    text-align: center;
 }
 
 h3 {
     font-size: 30px;
 }
 
-.right{
- float:right;
+h4 {
+    font-size: 30px;
 }
 
-.left{
- float:left;
-}
 
 div.a {
     text-align: center;
@@ -40,4 +39,11 @@ div.a {
 
 a:hover {
     background-color:#ccccff;
+}
+
+footer {
+    background-color: #58BFA7;
+    margin: -57px;
+    padding: 10px;
+
 }
