changed CSS and added reset file

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -40,10 +40,20 @@ header {
     color: whitesmoke;
 }
 
+h1 {
+    font-size: 40px;
+}
+
+.links {
+    border: 2px solid whitesmoke;
+    border-radius: 10px;
+    padding: 2px;
+}
+
 .bio {
     float:left;
     width: 424px;
-    padding: 0px 10px;
+    padding: 5px 10px;
     margin: 10px;
 
     border: solid whitesmoke;
@@ -55,9 +65,10 @@ header {
 }
 
 .fa {
-    padding: 20px;
+    padding: 10px;
     font-size: 30px;
     width: 50px;
+    border-radius: 10px;
     text-align: center;
     text-decoration: none;
 }
