--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -14,17 +14,27 @@ header {
    color:white;
     background: black;
     margin: 0 auto;
-    padding:10px;
+    padding:8px;
     
 }
 
+nav {
+    font-size: 15px;
+    border-top-color: whitesmoke;
+    border-top: 2px solid;
+    margin-top: 5px;
+    padding: 8px;
+
+
+}
 img {
     border-radius: 20px;
-    width: 140px;
+    width: 180px;
     border: solid black 1px;
     opacity: .5;
     float:left;
-    margin:10px;
+    margin:5px;
+    padding:10px;
 
 }
 img:hover {
@@ -32,7 +42,6 @@ img:hover {
 }
 
 .main {
-    border: solid grey 1px;
     border-radius: 20px;
     width: 500px;
     margin: 10 auto;
