--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -23,3 +23,46 @@ p{
     text-align: inherit;
     font-family: 'Times New Roman', Times, serif;
 }
+.boxe
+    border: 20px skyblue ;
+}
+.boxed audio {
+    border: 20px #cfcfcf ;
+    border-style: solid
+}
+.container{
+
+}
+
+.player{
+    position: center;
+    background: #fc76a9;
+    border-radius: 0 0 15px 15px;
+    overflow: hidden;
+
+}
+.player.top::before{
+    position: center;
+    background: #4ca3b3;
+    overflow: hidden;
+    text-align: center;
+
+}
+.art{
+
+
+}
+.logo{
+    overflow: hidden;
+    background-color: aquamarine;
+    padding: 20px 10px
+
+
+}
+.pic.resize{
+    width: 560px;
+    height: auto;
+
+
+
+}
