--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,35 +1,68 @@
+.clearfix:after { 
+    content: "";
+    clear: both;
+    display: block;
+  }
 body {
-    background-color:#5EC7DC;
-    background-image: url("../background.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
+    background-color:  rgb(139, 70, 60);
+}
+.header {
+    font-family: Cambria, Cochin, Georgia, Times, 'Copperplate', serif;
+    text-align: center;
+    font-size: 82px;
+    background-color: rgb(243, 229, 211);
+}
+li {
+    display: inline;
+    margin: 20px;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 8px;
+    background-color: rgb(245, 238, 229);
+}
+nav {
+    font-family: Cambria, Cochin, Georgia, Times, 'Copperplate', serif;
+    text-align: center;
+    font-size: 22px;
+    position: sticky;
+    top: 0px;
+}
+section {
+    float:left;
+    height: 350px;
+    width: 600px;
+    margin: 50px;
 }
 article {
-    text-align: left;
+    text-indent: 35px;
+}
+aside {
+    float:left;
+    height: 350px;
+    width: 350px;
+    margin: 50px;
+    font-size: 20px;
+    text-indent: 35px;
+}
+a {
+    text-decoration: none;
+}
+a:link {
+    color: black;
+}
+a:visited {
+    color: black;
+}
+a:hover {
+    color: rgb(29, 134, 129);
+}
+article {
+    font-size: 20px;
     float: left;
-    letter-spacing: 1.5px;
-    line-height: 21px;
-    height: 323px;
-    width: 550px;
-    background-color: blanchedalmond;
-    border-style: solid;
-    border-width: 2px;
-    border-color: aquamarine;
-    opacity: 0.6;
 }
-div {
-    text-align: center;
-    float: right;
-    letter-spacing: 1.5px;
-    line-height: 20px;
-    height: 325px;
-    width: 325px;
-    background-color: blanchedalmond;
-    opacity: 0.6;
+.aboutme {
+    font-size: 20px;
+    text-indent: 35px;
 }
-/* aside {
-    text-align: left;
-    float: right;
-    height: 308px;
-    width: 250px;
-} */
