--- a/02week/bio/bio.css
+++ b/02week/bio/bio.css
@@ -27,15 +27,17 @@ hr {
 
 img {
 	float: left;
-	margin: 3%;
+	margin-left: 80px;
+	border-radius: 120px;
+	margin-top:80px;
 }
 
 
-div.position {
+.position {
 	position: relative;
 	width:950px;
-	left: 100px;
-	top: 100px;
+	left: 80px;
+	top: 120px;
 
 }
 
@@ -44,7 +46,6 @@ footer {
 	width: 100%;
 	min-height: 50px;
 	text-align: center;
-
 
 }
 
