added comtact page to portfolio changed styling on bio added text to checkpoint 3

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 .navi {
     height: 83px;
-    background-color: whitesmoke;
+    background-color:rgb(53, 6, 53);
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
@@ -32,8 +32,9 @@ body{
     color: grey;
 }
 .header{
-    color:grey;
     font-size:60px;
+    font-family: 'Charmonman', cursive;
+    color:rgb(53, 6, 53);
     display: flex;
     justify-content: center;
 }
