restyled page and added examples of artwork

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,101 +1,98 @@
-header {
-    padding-right: 200px;
-    text-align: right;
-    font-family: michroma;
-    color: #BDCC94;
-}
-
 body {
-    background-image: url("../Images/strange_bullseyes.png");
+    margin: 0 auto;
+    width: 90%;
+    padding: 2%;
 }
 
-/* ------------------------------------ */
-
-nav {
-    float: left;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    list-style-type: none;
-    font-family: michroma;
-    background-color: none;
-}
- 
-li { 
-    float: left;
-}
- 
-li a {
-    display: block;
-    color: black;
-    background-color: #DEDEDE;
-    padding: 10px 35px;
-    border-radius: 20px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #6F7F65;
-    color: whitesmoke;
-}
-
-/* -------------------------------------- */
-
-main {
+.title-container {
     display: flex;
-    padding: 10px;
+    background-color: azure;
+    width: 100%;
+    height: 300px;
+    align-items: center;
+    justify-content: center;
 }
 
-section {
-    padding: 10px;
-    background-image: url("../Images/topography.png");
-    border-radius: 12px;
-    font-family: hammersmith one;
-    font-size: 15px;
-    height: 75%;
-    margin-top: 100px;
+/* .title {
+    margin: 20px;
+    justify-items: center;
+    align-items: center;
+} */
+
+.bio-container {
+    display: flex;
+    height: 400px;
+    background-color: beige;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+    padding: 30px;
+}
+#bio {
+    width: 420px;
+    margin: 0 20px;
+    color: darkcyan;
+    text-align: center;
+    font-family: montserrat;
+    font-size: 20px;
 }
 
-aside {
-    background-color:transparent;
-    padding: 5px;
-    border-radius: 12px;
-    
+#bio p {
+    font-size: .75em;
+    font-family: Arial, Helvetica, sans-serif;
+    }
+
+.art-container {
+    flex-wrap: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+    align-items: center;
+    justify-content: space-evenly;
+    /* padding: 30px; */
 }
 
-.image-cropper {
-    height: auto;
-    position: relative;
+#art01 {
+    justify-content: center;
+}
+.artwork {
+    display: flex;
+    width: 100%;
+}
+/*
+#bowl {
+    padding-left: 200px; */
 }
 
-.image-cropper img{
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border-radius: 50%;  
+#clay {
+    /* display: flex; */
+    /* justify-content: space-around; */
+    /* align-items: center; */
+    /* padding: 30px; */
 }
 
-p {
+.ceramic {
+    display: flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    padding: 30px;
+    margin: 30px;
+}
+
+#bowl {
     padding-left: 50px;
 }
 
-img {
-    float: right;
-    padding: 20px;
-    margin-bottom: 75px;
-    border-radius: 20px;
+.artwork-orange {
+    display: flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    margin: 30px;
+    padding: 10px;
 }
 
-/* -------------------------------------------------------------------------- */
-
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-image: transparant;
-    color: black;
-    text-align: center;
-    font-family: questrial;
+#art {
+    justify-content: space-around;
+    align-items: center;
 }
+
