added contact page

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -46,9 +46,10 @@ body{
 }
 .section{
     background-color:white;
-    border: 2px whitesmoke solid;
+    border: 2px rgb(53, 6, 53) solid;
     margin:35px;
     padding: 15px;
+    height: 50%;
     color: grey;
     display: flex;
     justify-content: center;
@@ -59,7 +60,7 @@ body{
     margin: 35px;
     padding: 15px;
     background-color: white;
-    border: 2px whitesmoke solid;
+    border: 2px rgb(53, 6, 53) solid;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -84,4 +85,5 @@ p{
   
   .html {width: 90%; background-color:rgb(53, 6, 53);}
   .css {width: 80%; background-color: rgb(53, 6, 53);}
-  .js {width: 20%; background-color: rgb(53, 6, 53);}
+  .js {width: 50%; background-color: rgb(53, 6, 53);}
+  .jquery {width: 50%; background-color: rgb(53, 6, 53);}
