--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,14 +1,15 @@
 body {
     margin: 0 auto;
-    width: 90%;
+    width: 80%;
     padding: 2%;
+    border: 30px solid darkolivegreen;
 }
 
 .title-container {
     display: flex;
     background-color: azure;
     width: 100%;
-    height: 300px;
+    height: 600px;
     align-items: center;
     justify-content: center;
 }
@@ -22,12 +23,14 @@ body {
 .bio-container {
     display: flex;
     height: 400px;
-    background-color: beige;
+    width: 75%;
+    background-color: bisque;
     align-items: center;
     justify-content: center;
-    margin: 30px;
+    margin: 30px 0px 0px 120px;
     padding: 30px;
 }
+
 #bio {
     width: 420px;
     margin: 0 20px;
@@ -40,7 +43,11 @@ body {
 #bio p {
     font-size: .75em;
     font-family: Arial, Helvetica, sans-serif;
-    }
+}
+
+#me {
+    padding: 50px;
+}
 
 .art-container {
     flex-wrap: flex;
@@ -55,10 +62,12 @@ body {
 #art01 {
     justify-content: center;
 }
+
 .artwork {
     display: flex;
     width: 100%;
 }
+
 /*
 #bowl {
     padding-left: 200px; */
@@ -85,14 +94,13 @@ body {
 
 .artwork-orange {
     display: flex;
-    justify-content: space-evenly;
-    /* align-items: center; */
+    justify-content: space-between;
+    align-items: center;
     margin: 30px;
-    padding: 10px;
+    padding: 0px;
 }
 
 #art {
     justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
 }
-
