changed small details to css

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+body {background-image: url()}
+
+
+
 .title {
      color: white;
      text-align: center;
-     fonts: open Sans 
+     font: Open Sans;
      font-size: 400px;
      text-decoration: underline;
 }
