changed body font and header size

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,7 +1,12 @@
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 header {
   display: flex;
   background: #666;
   justify-content: space-between;
+  padding: 10px;
 }
 
 .identity {
@@ -61,7 +66,7 @@ main {
 
 footer {
   display: flex;
-  height: 150px;
+  height: 200px;
   background: #666;
   /* border: 1px solid black; */
   
