added a new background file

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,12 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
-body {background-image: url()}
-
-
-
-.title {
-     color: white;
-     text-align: center;
-     font: Open Sans;
-     font-size: 400px;
-     text-decoration: underline;
+body {background-image: url("../images/about\ me.jpg");
 }
+.header{
+    text-align: center;
+    text-decoration: underline;
+    text-decoration-color: antiquewhite;}
+.abp{ 
+    text-align: justify;
+    text-decoration-color: whitesmoke;}
