--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -143,6 +143,7 @@ footer {
   header {
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
  
   main {
@@ -155,7 +156,7 @@ footer {
   }
 
   .identity h1 {
-  margin-left: 120px;
+  margin-left: 50px;
 
   }
   .links {
@@ -163,22 +164,33 @@ footer {
     justify-content: center;
     margin-left: 100px;
   }
-  .headshot img {
+  .headshot > img {
     height: 300px;
     position: absolute;
-    left: 150px;
-    bottom: 50px
+    left: 90px;
+    bottom: 130px;
+    border-radius: 0px;
   }
 
   .description {
     position: relative;
-    top: 300px;
-    left: 50px;
+    top: 150px;
+    left: 20px;
+    width: 350px;
   }
+
+  .description p {
+    font-size: 14px;
+  }
+
   footer {
     display: flex;
     /* width: 100%; */
     height: 100px;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
   }
 
   .box1,
