--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,15 +1,11 @@
 @media screen and (max-width: 1600px) {
 
-
-html,
 body {
   margin: 0;
-  padding: 0;
-  height: 100%;
+  height: 100vh;
+  position: relative;
   font-family: 'Roboto', sans-serif;
-
 }
-
 header {
   display: flex;
   background: #666;
@@ -17,64 +13,52 @@ header {
   /* padding: 10px; */
   width: 100%;
 }
-
 .identity {
   margin-left: 100px;
 }
-
 header > .identity {
   color: white;
 }
-
 .links {
   display: flex;
   align-items: center;
   margin-right: 100px;
 }
-
 .links a:hover {
   color: black;
 }
-
 .header-nav {
   padding: 0 15px;
 }
-
 .header-nav > a {
   text-decoration: none;
   color: white;
 }
-
 main {
   display: flex;
   justify-content: space-evenly;
   margin: 50px 0;
-  /* border: 1px solid black; */
   position: relative;
   top: 120px;
+  padding-bottom: 200px;
+  overflow: auto;
 }
-
 .headshot {
   display: flex;
 }
-
 .headshot > img{
-  /* width: 100%; */
-  height: 500px;
-  border-radius: 12em;
+  height: 400px;
+  border-radius: 50%;
 }   
-
 .description {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 500px;
 }
-
 .description > .top span:first-child {
   font-weight: bold;
 }
-
 footer {
   display: flex;
   width: 100%;
@@ -83,59 +67,46 @@ footer {
   position: absolute;
   bottom: 0;
 }
-
 .footer-item {
   /* border: 1px solid black; */
   display: flex;
   color: white;
 }
-
 .box1 {
   flex: 1;
   align-items: center;
-  justify-content: center;
-  
+  justify-content: center; 
 }
-
 .box2 {
   flex: 2;
   align-items: center;
   justify-content: center;
-  
 }
-
 .box2 > a {
   text-decoration: none;
   color: white;
   padding: 0 15px;
 }
-
 .box3 {
   flex: 1;
   align-items: center;
   justify-content: center;
 }
-
 .box3 > a {
   color: white;
 }
-
 .fa-codepen:hover {
   color: purple;
 }
-
 .fa-jsfiddle:hover {
   color: rgb(26, 135, 224);
 }
-
 .fa-github:hover {
   color: black;
 }
-
 .fa-linkedin:hover {
   color: #0077B5;
 }
-
 }
 
 @media screen and (max-width: 600px) {
@@ -145,44 +116,42 @@ footer {
     flex-direction: column;
     width: 100%;
   }
- 
   main {
     display: flex;
     flex-direction: column;
+    margin-top: 0;
+    position: relative;
+    top: 50px;
   }
-
+  .identity {
+    margin-left: 0;
+    align-self: center;
+  }
   .identity p {
     display: none;
-  }
-
-  .identity h1 {
-  margin-left: 50px;
-
   }
   .links {
     display: flex;
     justify-content: center;
     margin-left: 100px;
   }
+  .headshot {
+    align-self: center;
+    /* border: 1px solid black; */
+  }
   .headshot > img {
-    height: 300px;
-    position: absolute;
-    left: 90px;
-    bottom: 130px;
     border-radius: 0px;
+    align-self: center;
+    height: 300px;
   }
-
   .description {
-    position: relative;
-    top: 150px;
-    left: 20px;
     width: 350px;
+    align-self: center;
+    margin-top: 20px;
   }
-
   .description p {
     font-size: 14px;
   }
-
   footer {
     display: flex;
     /* width: 100%; */
@@ -192,10 +161,8 @@ footer {
     left: 0;
     bottom: 0;
   }
-
   .box1,
   .box3 {
     display: none;
   }
-
 }
