revised footer to fixed

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,9 +1,8 @@
 @media screen and (max-width: 1600px) {
 
-
 body {
   margin: 0;
-  height: 100vh;
+  /* height: 100vh; */
   position: relative;
   font-family: 'Roboto', sans-serif;
 }
@@ -46,6 +45,7 @@ main {
 }
 .headshot {
   display: flex;
+  /* border-radius: 50%; */
 }
 .headshot > img{
   height: 400px;
@@ -63,9 +63,10 @@ main {
 footer {
   display: flex;
   width: 100%;
-  height: 200px;
+  min-height: 150px;
   background: #666;
-  position: absolute;
+  position: fixed;
+  left: 0;
   bottom: 0;
 }
 .footer-item {
