forgot to push bio after tuesday

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,78 +1,114 @@
 *{
-font-family: 'Roboto', sans-serif;
-}
-
-header {
-  background-color: red;
-  color: white;
-  display: inline-block;
-  position: relative;
-  width: 100%;
-}
-
-
-h1 {
-  display: inline;
-  float: unset;
-  font-size: 200px;
-  padding-top: 600px;
-
-}
-
-img {
-  float: right;
-}
-main {
-  height: 100px;
-  margin: 0%;
-  border: 0%;
-  background-image: url(https://s3.envato.com/files/57759146/preview.jpg);
-}
-nav {
-  color: red;
-  font-weight: 300px;
-  display: inline-block;
-  align-content: center;
-}
-
-.a:active {
-  color: none;
-}
-.wrapper {
-  align-content: center;
-  text-align: center;
-  float: unset;
-  font-weight: 100px;
-  background-color: red;
-}
-.wrapper:hover {
-  background-color: white;
-}
-}
-.wrapper ul {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  font-weight: 100px;
-}
-.wrapper ul li {
-  align-content: center;
-  display: inline-block;
-  border: 1px solid red;
-  font-weight: 100px;
-}
-article {
-  background-color: red;
-
-}
-h2 {
-  width: 50%;
-  margin-left: 50%;
-  align-content: center;
-}
-p {
-  width: 50%;
-  margin-left:50%;
-  float: right;
-
-}
+  font-family: 'Roboto', sans-serif;
+  
+  }
+ 
+  header {
+    /* background-color: red; */
+    color: rgb(223, 20, 155);
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+  }
+  
+  header h1 {
+    display: inline;
+    font-size: 200px;
+    /* padding-top: 400px; */
+    font-family: cursive;
+  
+  }
+  
+  img {
+    float: right;
+  }
+  main {
+    height: 100px;
+    width: 500px;
+    margin: 0%;
+    border: 0%;
+    display: inline-block;
+    /* background-image: url(https://s3.envato.com/files/57759146/preview.jpg); */
+  }
+  nav {
+    color: red;
+    font-weight: 300px;
+    display: inline-block;
+    align-content: center;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.349);
+    
+  }
+  
+  a:visited {
+    color: navy;
+    padding: 15px;
+  }
+  .wrapper {
+    align-content: center;
+    text-align: center;
+    /* float: unset; */
+    font-weight: 100px;
+    width: 100%;
+    display: inline;
+    /* background-color: red; */
+  }
+  .wrapper:hover {
+    background-color: white;
+  }
+  }
+  .wrapper ul {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    font-weight: 100px;
+  }
+  .wrapper ul li {
+    align-content: center;
+    display: inline-block;
+    font-weight: 100px;
+    padding: 0px;
+    width: 100%;
+  }
+  
+  body{
+    background-image: url(../css/fishing\ pic);
+    background-size: cover;
+  
+    
+  }
+  div {
+    background-color: rgba(255, 255, 255,0.4);
+    height: 100%;
+    width: 40%;
+    
+  }
+  
+  article {
+   
+    /* background-color: red; */
+  
+  }
+  
+  
+  }
+    
+  }
+  h2 {
+    width: 100%;
+    margin-left: 60%;
+    align-content: center;
+  }
+  p {
+    width: 98%;
+    margin-right:50%;
+    float: left;
+    color: rgb(201, 18, 155);
+    font-weight: bold;
+    font-size: 30px;
+    text-align: justify;
+  
+  }
+  
