--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -28,10 +28,11 @@
     display: inline;
     font-size: 8vh;
     font-family: cursive;
-    text-shadow: 0 0 10px #FFFFFF, 11px 9px 6px #1C6EA4;  }
-  img {
+    text-shadow: 0 0 10px #FFFFFF, 11px 9px 6px #1C6EA4; 
+   }
+  img.logo {
     float: right;
-    height: 100%;
+    height: 80%;
     width: 20%
   }
   main {
